force-app/main/default/objects/Account/fields/Account_Active123__c.field-meta.xml
<CustomField>
    <fullName>Account_Active123__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Test overwrite 11022023</description>
    <label>Account Active123</label>
    <type>Checkbox</type>
</CustomField>