force-app/main/default/objects/Account/fields/Account_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Account_Last_Modified__c</fullName>
    <description>Account Test</description>
    <label>Account Last Modified</label>
    <type>Date</type>
</CustomField>