force-app/main/default/objects/Account/fields/AccountStart__c.field-meta.xml
<CustomField>
    <fullName>AccountStart__c</fullName>
    <defaultValue>false</defaultValue>
    <description>test111423</description>
    <label>AccountStart</label>
    <type>Checkbox</type>
</CustomField>