force-app/main/default/objects/Account/fields/BD_POC_Email_1__c.field-meta.xml
<CustomField>
    <fullName>BD_POC_Email_1__c</fullName>
    <description>test</description>
    <label>BD POC Email #1</label>
    <type>Email</type>
</CustomField>