force-app/main/default/objects/Account/fields/BD_POC_Email_3__c.field-meta.xml
<CustomField>
    <fullName>BD_POC_Email_3__c</fullName>
    <description>test 112123</description>
    <label>BD POC Email #3</label>
    <type>Email</type>
</CustomField>