force-app/main/default/objects/Account/fields/BD_POC_Email__c.field-meta.xml
<CustomField>
    <fullName>BD_POC_Email__c</fullName>
    <label>BD POC Email #2</label>
    <type>Email</type>
</CustomField>