force-app/main/default/objects/Account/fields/BD_POC_Job_Title_1__c.field-meta.xml
<CustomField>
    <fullName>BD_POC_Job_Title_1__c</fullName>
    <label>BD POC Job Title #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>