force-app/main/default/objects/Account/fields/BD_POC_Job_Title_3__c.field-meta.xml
<CustomField>
    <fullName>BD_POC_Job_Title_3__c</fullName>
    <label>BD POC Job Title #3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>