force-app/main/default/objects/Account/fields/BD_POC_Name_2__c.field-meta.xml
<CustomField>
    <fullName>BD_POC_Name_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD POC Name #2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (BD POC Name 2)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>