force-app/main/default/objects/Account/fields/BD_POC_Name_3__c.field-meta.xml
<CustomField>
    <fullName>BD_POC_Name_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD POC Name #3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (BD POC Name 3)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>