force-app/main/default/objects/Account/fields/BD_POC_Name__c.field-meta.xml
<CustomField>
    <fullName>BD_POC_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BD POC Name #1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>