force-app/main/default/objects/Account/fields/BD_POC_Phone_1__c.field-meta.xml
<CustomField>
    <fullName>BD_POC_Phone_1__c</fullName>
    <label>BD POC Phone #1</label>
    <type>Phone</type>
</CustomField>