force-app/main/default/objects/Account/fields/BD_POC_Phone_3__c.field-meta.xml
<CustomField>
    <fullName>BD_POC_Phone_3__c</fullName>
    <label>BD POC Phone #3</label>
    <type>Phone</type>
</CustomField>