force-app/main/default/objects/Account/fields/BD_POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>BD_POC_Phone__c</fullName>
    <label>BD POC Phone #2</label>
    <type>Phone</type>
</CustomField>