force-app/main/default/objects/Account/fields/Best_In_Class_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Best_In_Class_Vehicles__c</fullName>
    <description>Select the companies current vehicles</description>
    <inlineHelpText>Select the companies current vehicles</inlineHelpText>
    <label>Best In Class Vehicles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT70 Prime</fullName>
            </value>
            <value>
                <fullName>SeaPort-e Prime</fullName>
            </value>
            <value>
                <fullName>VETS 2</fullName>
            </value>
            <value>
                <fullName>T4NG Prime</fullName>
            </value>
            <value>
                <fullName>OASIS</fullName>
            </value>
            <value>
                <fullName>OASIS Small Business</fullName>
            </value>
            <value>
                <fullName>NASA SEWP</fullName>
            </value>
            <value>
                <fullName>8(a) STARS II	Alliant 2</fullName>
            </value>
            <value>
                <fullName>NITAAC CIOSP3 Small Business</fullName>
            </value>
            <value>
                <fullName>NITAAC CIOSP3 Unrestricted</fullName>
            </value>
            <value>
                <fullName>VECTOR Service Group 1</fullName>
            </value>
            <value>
                <fullName>VECTOR Service Group 2</fullName>
            </value>
            <value>
                <fullName>VECTOR Service Group 3</fullName>
            </value>
            <value>
                <fullName>VECTOR Service Group 4</fullName>
            </value>
            <value>
                <fullName>VECTOR Service Group 5</fullName>
            </value>
            <value>
                <fullName>VECTOR Service Group 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>