force-app/main/default/objects/Account/fields/Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Capabilities__c</fullName>
    <description>Select the companies capabilities</description>
    <inlineHelpText>Select the companies capabilities</inlineHelpText>
    <label>Capabilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DevSecOps</fullName>
            </value>
            <value>
                <fullName>Agile Development</fullName>
            </value>
            <value>
                <fullName>Database/Data Warehousing</fullName>
            </value>
            <value>
                <fullName>Data &amp; Analytics</fullName>
            </value>
            <value>
                <fullName>AI/ML/Data Engineering</fullName>
            </value>
            <value>
                <fullName>RPA</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Cloud &amp; Infrastructure</fullName>
            </value>
            <value>
                <fullName>PMO</fullName>
            </value>
            <value>
                <fullName>No Code/Low Code Platforms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>