force-app/main/default/objects/Account/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <description>Select the companies certifications</description>
    <inlineHelpText>Select the companies certifications</inlineHelpText>
    <label>Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GLP</fullName>
            </value>
            <value>
                <fullName>CMMI-Services Level 1</fullName>
            </value>
            <value>
                <fullName>CMMI-Services Level 2</fullName>
            </value>
            <value>
                <fullName>CMMI-Services Level 3</fullName>
            </value>
            <value>
                <fullName>CMMI-Services Level 4</fullName>
            </value>
            <value>
                <fullName>CMMI-Services Level 5</fullName>
            </value>
            <value>
                <fullName>ISO 9001</fullName>
            </value>
            <value>
                <fullName>ISO 20000</fullName>
            </value>
            <value>
                <fullName>ISO 27001</fullName>
            </value>
            <value>
                <fullName>CMMC</fullName>
            </value>
            <value>
                <fullName>MBNQA</fullName>
            </value>
            <value>
                <fullName>AS 9100</fullName>
            </value>
            <value>
                <fullName>AS 9110</fullName>
            </value>
            <value>
                <fullName>AS 9120</fullName>
            </value>
            <value>
                <fullName>CMMI for Development Level 2</fullName>
            </value>
            <value>
                <fullName>CMMI for Development Level 3</fullName>
            </value>
            <value>
                <fullName>CMMI for Development Level 4</fullName>
            </value>
            <value>
                <fullName>CMMI for Development Level 5</fullName>
            </value>
            <value>
                <fullName>ISO 13485</fullName>
            </value>
            <value>
                <fullName>ISO 14001</fullName>
            </value>
            <value>
                <fullName>ISO 17025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>