force-app/main/default/objects/Account/fields/Contracts_POC_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Contracts_POC_Email_2__c</fullName>
    <label>Contracts POC Email #2</label>
    <type>Email</type>
</CustomField>