force-app/main/default/objects/Account/fields/Contracts_POC_Email__c.field-meta.xml
<CustomField>
    <fullName>Contracts_POC_Email__c</fullName>
    <label>Contracts POC Email #1</label>
    <type>Email</type>
</CustomField>