force-app/main/default/objects/Account/fields/Contracts_POC_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Contracts_POC_Job_Title__c</fullName>
    <label>Contracts POC Job Title #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>