force-app/main/default/objects/Account/fields/Contracts_POC_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Contracts_POC_Name_1__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contracts POC Name #1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contacts POC Name)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>