force-app/main/default/objects/Account/fields/Contracts_POC_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Contracts_POC_Name_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contracts POC Name #2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contracts POC Name 2)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>