force-app/main/default/objects/Account/fields/Contracts_POC_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Contracts_POC_Phone_2__c</fullName>
    <label>Contracts POC Phone #2</label>
    <type>Phone</type>
</CustomField>