force-app/main/default/objects/Account/fields/Contracts_POC_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contracts_POC_Phone__c</fullName>
    <label>Contracts POC Phone #1</label>
    <type>Phone</type>
</CustomField>