force-app/main/default/objects/Account/fields/Corporate_Bio__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Bio__c</fullName>
    <label>Corporate Bio</label>
    <length>100</length>
    <type>Text</type>
</CustomField>