force-app/main/default/objects/Account/fields/Duns__c.field-meta.xml
<CustomField>
    <fullName>Duns__c</fullName>
    <label>Duns #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>