force-app/main/default/objects/Account/fields/Facility_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Facility_Clearance__c</fullName>
    <description>Select the companies facility clearance level</description>
    <inlineHelpText>Select the companies facility clearance level</inlineHelpText>
    <label>Facility Clearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>DOE L</fullName>
            </value>
            <value>
                <fullName>DOE Q</fullName>
            </value>
            <value>
                <fullName>ISSA</fullName>
            </value>
            <value>
                <fullName>SBI</fullName>
            </value>
            <value>
                <fullName>Secret</fullName>
            </value>
            <value>
                <fullName>Top Secret</fullName>
            </value>
            <value>
                <fullName>TS/SBI</fullName>
            </value>
            <value>
                <fullName>TS/SCITSSI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>