force-app/main/default/objects/Account/fields/If__c.field-meta.xml
<CustomField>
    <fullName>If__c</fullName>
    <description>Explain why B3 does not want to do business with the company</description>
    <inlineHelpText>Explain why B3 does not want to do business with the company</inlineHelpText>
    <label>If inactive, please explain why</label>
    <length>100</length>
    <type>Text</type>
</CustomField>