force-app/main/default/objects/Account/fields/INPT_Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>INPT_Profile_URL__c</fullName>
    <description>This field is used by the GovWin IQ Connector. This field is the URL of the related GovWin IQ Profile (federal or S &amp; L).</description>
    <label>IQ Profile URL</label>
    <type>Url</type>
</CustomField>