force-app/main/default/objects/Account/fields/Large_Small__c.field-meta.xml
<CustomField>
    <fullName>Large_Small__c</fullName>
    <description>Select if the company is considered small or large</description>
    <inlineHelpText>Select if the company is considered small or large</inlineHelpText>
    <label>Large/Small</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>