force-app/main/default/objects/Account/fields/Non_VA_Customers__c.field-meta.xml
<CustomField>
    <fullName>Non_VA_Customers__c</fullName>
    <label>Non-VA Customers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency For International Development</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Air Force</fullName>
            </value>
            <value>
                <fullName>Armed Forces Retirement Home</fullName>
            </value>
            <value>
                <fullName>Army</fullName>
            </value>
            <value>
                <fullName>ATBCB</fullName>
            </value>
            <value>
                <fullName>CIGIE</fullName>
            </value>
            <value>
                <fullName>CNCS</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Commodity Futures Trading Commission</fullName>
            </value>
            <value>
                <fullName>Congress</fullName>
            </value>
            <value>
                <fullName>Consumer Product Safety Commission</fullName>
            </value>
            <value>
                <fullName>CPPBSD</fullName>
            </value>
            <value>
                <fullName>CSB</fullName>
            </value>
            <value>
                <fullName>CSOSA</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Defense Nuclear Facilities Safety Board</fullName>
            </value>
            <value>
                <fullName>Denali Commission</fullName>
            </value>
            <value>
                <fullName>DFC</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>EEOC</fullName>
            </value>
            <value>
                <fullName>Election Assistance Commission</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Environmental Protection Agency</fullName>
            </value>
            <value>
                <fullName>Executive Office of the President</fullName>
            </value>
            <value>
                <fullName>Export-Import Bank of the US</fullName>
            </value>
            <value>
                <fullName>Federal Communications Commission</fullName>
            </value>
            <value>
                <fullName>Federal Election Commission</fullName>
            </value>
            <value>
                <fullName>Federal Housing Finance Agency</fullName>
            </value>
            <value>
                <fullName>Federal Labor Relations Authority</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>