force-app/main/default/objects/Account/fields/Primary_NAICS__c.field-meta.xml
<CustomField>
    <fullName>Primary_NAICS__c</fullName>
    <description>Enter the primary NAICS code, found in GovWin</description>
    <inlineHelpText>Enter the primary NAICS code, found in GovWin</inlineHelpText>
    <label>Primary NAICS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>