force-app/main/default/objects/Account/fields/Socio_Economic_Status__c.field-meta.xml
<CustomField>
    <fullName>Socio_Economic_Status__c</fullName>
    <label>Socio-Economic Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>8a</fullName>
            </value>
            <value>
                <fullName>SDVOSB</fullName>
            </value>
            <value>
                <fullName>HUBZone</fullName>
            </value>
            <value>
                <fullName>SDB</fullName>
            </value>
            <value>
                <fullName>WOSB</fullName>
            </value>
            <value>
                <fullName>VOSB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>