force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Active indicates that B3 would like to do business with the company. Inactive indicates that B3 does not want to do business with the company</description>
    <inlineHelpText>Active indicates that B3 would like to do business with the company. Inactive indicates that B3 does not want to do business with the company</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>