force-app/main/default/objects/Account/fields/VA_Customers__c.field-meta.xml
<CustomField>
    <fullName>VA_Customers__c</fullName>
    <description>Select the VA customers the company has worked with</description>
    <inlineHelpText>Select the VA customers the company has worked with</inlineHelpText>
    <label>VA Customers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition, Logistics, and Construction</fullName>
            </value>
            <value>
                <fullName>Advisory Committee Management Office</fullName>
            </value>
            <value>
                <fullName>Board of Veterans&apos; Appeals</fullName>
            </value>
            <value>
                <fullName>Center for Minority Veterans</fullName>
            </value>
            <value>
                <fullName>Center for Women Veterans</fullName>
            </value>
            <value>
                <fullName>CFOI</fullName>
            </value>
            <value>
                <fullName>General Counsel</fullName>
            </value>
            <value>
                <fullName>Inspector General</fullName>
            </value>
            <value>
                <fullName>National Cemetery Admin</fullName>
            </value>
            <value>
                <fullName>OAWP</fullName>
            </value>
            <value>
                <fullName>OCLA</fullName>
            </value>
            <value>
                <fullName>OEDCA</fullName>
            </value>
            <value>
                <fullName>OEI</fullName>
            </value>
            <value>
                <fullName>Office of HR and Administration OI&amp;T</fullName>
            </value>
            <value>
                <fullName>Office of Management</fullName>
            </value>
            <value>
                <fullName>Office of Survivors Assistance</fullName>
            </value>
            <value>
                <fullName>OPIA</fullName>
            </value>
            <value>
                <fullName>ORPM</fullName>
            </value>
            <value>
                <fullName>OSDBU</fullName>
            </value>
            <value>
                <fullName>OSP</fullName>
            </value>
            <value>
                <fullName>SCSP</fullName>
            </value>
            <value>
                <fullName>VBA</fullName>
            </value>
            <value>
                <fullName>VEO</fullName>
            </value>
            <value>
                <fullName>Veterans Service Organization Liaison</fullName>
            </value>
            <value>
                <fullName>VHA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>