force-app/main/default/objects/Account/validationRules/Employees_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Employees_Number</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNUMBER( Number_of_Employees__c ))</errorConditionFormula>
    <errorMessage>Number of Employees must be a number</errorMessage>
</ValidationRule>