force-app/main/default/objects/Account/validationRules/If_InActive_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>If_InActive_Requirement</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c , &apos;Inactive&apos;), 
 ISBLANK( If__c) 


)</errorConditionFormula>
    <errorMessage>If inactive, please explain why</errorMessage>
</ValidationRule>